more cache refactoring